Fix z-index to properly show cookie message

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -128,8 +128,10 @@ body[a="dark"] div.highlighter-rouge code {
   background: white;
   border-top: thin solid black;
   padding: 1rem;
-  z-index: 1000;
+  z-index: 9999;
   display: none;
+  filter: none !important;
+  color: black;
 }
 
 .cookie-notice-content {
@@ -140,12 +142,19 @@ body[a="dark"] div.highlighter-rouge code {
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+  color: black;
 }
 
 .cookie-notice-text {
   flex: 1;
   min-width: 250px;
   margin: 0;
+  color: black;
+}
+
+.cookie-notice-text a {
+  color: black;
+  text-decoration: underline;
 }
 
 .cookie-accept-button {
